ダイス数40越えの処理忘れてた🌈

--- a/mayo_dice.html
+++ b/mayo_dice.html
@@ -46,7 +46,7 @@
             err()
             return
         }
-        if (n === NaN || n === undefined || n < 2) {
+        if (n === NaN || n === undefined || n < 2 || n > 40) {
             err()
             return
         }
