エラー文アプデ

--- a/DXCharacter.html
+++ b/DXCharacter.html
@@ -822,6 +822,11 @@
             "大丈夫。こわくないよ。おいで。\nお姉さんと一緒にURL確認しよう。",
             "あ、オレや…URLエラーや…",
             "爺ちゃんが出てきたURLを「こんなもんこうじゃ」って焼酎に付けて\n「怖いじゃろワシは怖ない」\nとか言いながら食ってエラー吐いて救急車騒ぎになったの、\n今でも意味わかんないんだよな。",
+            "共にURLを確認しよう\n同星達よ……!!",
+            "は、URLのミスということか……そう簡単にはいかないか……。",
+            "明日になったら　URL確認しようよ",
+            "今日 お前には\"エラー\"が出ている",
+            "これって……\nああ\n\nURLのコピペミスだ"
         ]
         myrand = Math.floor(Math.random() * errlist.length);
         alert(errlist[myrand]);
