--- a/mayo_dice.html
+++ b/mayo_dice.html
@@ -100,7 +100,10 @@
             "は、入力値のミスということか……そう簡単にはいかないか……。",
             "明日になったら　数値確認しようよ",
             "今日 お前には\"エラー\"が出ている",
-            "これって……\nああ\n\n数値のエラーだ"
+            "これって……\nああ\n\n数値のエラーだ",
+            "磯部ガキ──\n奴は見た瞬間ヤバいとわかる数値のエラーを一撃で粉砕しやがった──！",
+            "でも尾長魚っていいよな\nエラーがでてもこいつらがいるだけで多少は明るく感じる",
+            "hmm…très bizarre. （入力が何かおかしい）",
         ]
         myrand = Math.floor(Math.random() * errlist.length);
         alert(errlist[myrand]);
