ザオ化・皇

--- a/DXCharacter.html
+++ b/DXCharacter.html
@@ -826,7 +826,10 @@
             "は、URLのミスということか……そう簡単にはいかないか……。",
             "明日になったら　URL確認しようよ",
             "今日 お前には\"エラー\"が出ている",
-            "これって……\nああ\n\nURLのコピペミスだ"
+            "これって……\nああ\n\nURLのコピペミスだ",
+            "あーーっはっはっは\nエラーが出てきて残念だったな\nこんなURL見たのは久しぶりだありがとよ！\nいやー笑わせてくれるよほんとブハハハハハハハハーッハッハッーーーー！！",
+            "ウワアアアアアア！ウオォ！URLエラアーーーーーーーー！！！",
+            "これほどの力を持つURLが現れたのは初めてだ　この死の歯車でエラーをぶっ殺す！",
         ]
         myrand = Math.floor(Math.random() * errlist.length);
         alert(errlist[myrand]);
