エラー文更新

--- a/DXCharacter.html
+++ b/DXCharacter.html
@@ -828,6 +828,7 @@
             "今日 お前には\"エラー\"が出ている",
             "これって……\nああ\n\nURLのコピペミスだ",
             "あーーっはっはっは\nエラーが出てきて残念だったな\nこんなURL見たのは久しぶりだありがとよ！\nいやー笑わせてくれるよほんとブハハハハハハハハーッハッハッーーーー！！",
+            "父さんのいうとおりだ 俺は磯部じゃない\n俺は…\n\nURLエラーを滅ぼす者だ！！",
             "ウワアアアアアア！ウオォ！URLエラアーーーーーーーー！！！",
             "これほどの力を持つURLが現れたのは初めてだ　この死の歯車でエラーをぶっ殺す！",
         ]
